// Copyright 2016 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/google/keytransparency/core/api/v1/keytransparency_proto";

// Key Transparency
//
// The Key Transparency API consists of a map of user names to public
// keys. Each user name also has a history of public keys that have been
// associated with it.
package google.keytransparency.v1;

import "google/api/annotations.proto";
import "crypto/keyspb/keyspb.proto";
import "crypto/sigpb/sigpb.proto";
import "trillian.proto";
import "trillian_map_api.proto";
import "v1/keytransparency_proto/admin.proto";

// Committed represents the data committed to in a cryptographic commitment.
// commitment = HMAC_SHA512_256(key, data)
message Committed {
  // key is the 16 byte random commitment key.
  bytes key = 1;
  // data is the data being committed to.
  bytes data = 2;
}

// EntryUpdate contains the user entry update(s).
message EntryUpdate {
  // mutation authorizes the change to entry.
  Entry mutation = 2;
  // commitment contains the data committed to in update.commitment.
  Committed committed = 3;
}

//
// Verifiable Map Leaf Data and Mutation Data.
//

// Entry is a signed change to a map entry.
// Entry contains a commitment to profile and a set of authorized update keys.
// Entry is placed in the verifiable map as leaf data.
message Entry {
  // index is the location of this leaf in the sparse merkle tree.
  bytes index = 3;
  // commitment is a cryptographic commitment to arbitrary data.
  bytes commitment = 6;
  // authorized_keys is the set of keys allowed to sign updates for this entry.
  repeated keyspb.PublicKey authorized_keys = 7;
  // previous contains the hash of the previous entry that this mutation is
  // modifying creating a hash chain of all mutations. The hash used is
  // CommonJSON in "github.com/benlaurie/objecthash/go/objecthash".
  bytes previous = 8;

  // signatures on key_value. Must be signed by keys from both previous and
  // current epochs. The first proves ownership of new epoch key, and the
  // second proves that the correct owner is making this change.
  map<string, sigpb.DigitallySigned> signatures = 2;
}

// MutationProof contains the information necessary to compute the new leaf value.
// It contains a) the old leaf value with it's inclusion proof and b) the mutation.
// The new leaf value is computed via:
//       Mutate(leaf_value, mutation)
message MutationProof {
  // mutation contains the information needed to modify the old leaf.
  // The format of a mutation is specific to the particular Mutate function being used.
  Entry mutation = 1;
  // leaf_proof contains the leaf and its inclusion proof for a particular map revision.
  trillian.MapLeafInclusion leaf_proof = 2;
}

// MapperMetadata tracks the mutations that have been mapped so far. It is
// embedded in the Trillian SignedMapHead.
message MapperMetadata {
  int64 highest_fully_completed_seq = 1;
}

// UserProfile is the data that a client would like to store on the server.
message UserProfile {
  // data is the public key data for the user.
  bytes data = 1;
}

// GetEntryRequest for a user object.
message GetEntryRequest {
  // domain_id identifies the domain in which the user and application live.
  string domain_id = 4;
  // user_id is the user identifier. Most commonly an email address.
  string user_id = 1;
  // app_id is the identifier for the application.
  string app_id = 2;
  // first_tree_size is the tree_size of the currently trusted log root.
  // Omitting this field will omit the log consistency proof from the response.
  int64 first_tree_size = 3;
}

// GetEntryResponse returns a requested user entry.
message GetEntryResponse {
  //
  // Privacy layer hides user_id and profile data until requested.
  //

  // vrf_proof is the proof for VRF on user_id.
  bytes vrf_proof = 1;

  // committed contains the profile for this account and connects the data
  // in profile to the commitment in leaf_proof.
  Committed committed = 2;

  //
  // Trillian map layer proves that the response is consistent.
  //

  // leaf_proof contains an Entry and an inclusion proof in the sparse Merkle
  // Tree.
  trillian.MapLeafInclusion leaf_proof = 3;
  // smr contains the signed map head for the sparse Merkle Tree.
  // smr is also stored in the append only log.
  trillian.SignedMapRoot smr = 4;

  //
  // Trillian log layer proves that smr is part of a globally consistent, append only log.
  //

  // log_root is the latest globally consistent log root.
  // TODO: gossip the log root to verify global consistency.
  trillian.SignedLogRoot log_root = 5;
  // log_consistency proves that log_root is consistent with previously seen roots.
  repeated bytes log_consistency = 6;
  // log_inclusion proves that smr is part of log_root at index=srm.MapRevision.
  repeated bytes log_inclusion = 7;
}

// ListEntryHistoryRequest gets a list of historical keys for a user.
message ListEntryHistoryRequest {
  // domain_id identifies the domain in which the user and application live.
  string domain_id = 6;
  // user_id is the user identifier.
  string user_id = 1;
  // start is the starting epoch.
  int64 start = 2;
  // page_size is the maximum number of entries to return.
  int32 page_size = 3;
  // app_id is the identifier for the application.
  string app_id = 4;
  // first_tree_size is the tree_size of the currently trusted log root.
  // Omitting this field will omit the log consistency proof from the response.
  int64 first_tree_size = 5;
}

// ListEntryHistoryResponse requests a paginated history of keys for a user.
message ListEntryHistoryResponse {
  // values represents the list of keys this user_id has contained over time.
  repeated GetEntryResponse values = 1;
  // next_start is the next page token to query for pagination.
  // next_start is 0 when there are no more results to fetch.
  int64 next_start = 2;
}

// UpdateEntryRequest updates a user's profile.
message UpdateEntryRequest {
  // domain_id identifies the domain in which the user and application live.
  string domain_id = 5;
  // user_id specifies the id for the user who's profile is being updated.
  string user_id = 1;
  // app_id is the identifier for the application.
  string app_id = 2;
  // first_tree_size is the tree_size of the currently trusted log root.
  // Omitting this field will omit the log consistency proof from the response.
  int64 first_tree_size = 3;
  // entry_update contains the user submitted update.
  EntryUpdate entry_update = 4;
}

// UpdateEntryResponse contains a proof once the update has been included in
// the Merkle Tree.
message UpdateEntryResponse {
  // proof contains a proof that the update has been included in the tree.
  GetEntryResponse proof = 1;
}

// GetEpochRequest identifies a particular epoch.
message GetEpochRequest {
  // domain_id is the domain for which epochs are being requested.
  string domain_id = 5;
  // epoch specifies the epoch number in which mutations will be returned.
  int64 epoch = 1;
  // first_tree_size is the tree_size of the currently trusted log root.
  // Omitting this field will omit the log consistency proof from the response.
  int64 first_tree_size = 2;
}

// GetLatestEpochRequest identifies a particular epoch.
message GetLatestEpochRequest {
  // domain_id is the domain for which epochs are being requested.
  string domain_id = 1;
  // first_tree_size is the tree_size of the currently trusted log root.
  // Omitting this field will omit the log consistency proof from the response.
  int64 first_tree_size = 2;
}

// Epoch represents a snapshot of the entire key directory and
// a diff of what changed between this revision and the previous revision.
message Epoch {
  // domain_id is the domain identifier.
  string domain_id = 1;
  // smr contains the signed map root for the sparse Merkle Tree.
  trillian.SignedMapRoot smr = 2;
  // log_root is the latest globally consistent log root.
  trillian.SignedLogRoot log_root = 3;
  // log_consistency proves that log_root is consistent with previously seen roots.
  repeated bytes log_consistency = 4;
  // log_inclusion proves that smr is part of log_root at index=srm.MapRevision.
  repeated bytes log_inclusion = 5;
}

// ListMutationsRequest requests the mutations that created a given epoch.
message ListMutationsRequest {
  // domain_id is the domain identifier.
  string domain_id = 5;
  // epoch specifies the epoch number.
  int64 epoch = 1;
  // page_token defines the starting point for pagination.
  // To request the next page, pass next_page_token from the previous response.
  // To start at the beginning, simply omit page_token from the request.
  string page_token = 3;
  // page_size is the maximum number of mutations to return in a single request.
  // The server may choose a smaller page_size than the one requested.
  int32 page_size = 4;
  // TODO(gbelvin): Add field mask.
}

// ListMutationsResponse contains the mutations that produced an epoch.
message ListMutationsResponse {
  // mutations contains the the mutation object and the leaf value it operated on.
  repeated MutationProof mutations = 6;
  // next_page_token is the next page token to query for pagination.
  // An empty value means there are no more results to fetch.
  string next_page_token = 7;
}

// The KeyTransparency API represents a directory of public keys.
//
// The API has a collection of domains:
// `/v1/domains/`
//  * Each domain has a single sparse merkle tree, append only log,
//    and other public key material that is needed to verify server responses.
//
// Each Domain has a collection of snapshots called epochs:
// `/v1/domains/*/epochs/`
//  * Each Epoch contains the root of the sparse merkle tree and the changes that
//    occurred that epoch and the previous.
//
// Each Epoch has a collection of mutations:
// `/v1/domains/*/epochs/*/mutations/`.
//  * Each mutation contains the leafvalue of the previous epoch that it operated on.
//  * The full set of mutations for an epoch allows the receiver to compute the
//     Merkle Tree Root of this epoch from the previous epoch.
//
// Each Domain has a collection of applications:
// `/v1/domains/*/apps/`
//  * Each Application has distinct users and permissions, but are indistinguishable
//    from each other just by looking at the tree.
//
// Each Application has a collection of Users:
// `/v1/domains/*/apps/*/users`
//  * Each User contains public key material, permissions for who is allowed to change
//    that user, and signatures indicating who made the last change.
//
// Each User also has a collection of historical values for user:
// `/v1/domains/*/apps/*/users/*/history`
//
service KeyTransparency {
  // GetDomain returns the information needed to verify the specified domain.
  rpc GetDomain(GetDomainRequest) returns (Domain) {
    option (google.api.http) = { get: "/v1/domains/{domain_id}" };
  }

  // GetEpoch returns a SignedMapRoot by the by the requested revision number
  // along with its inclusion proof in the log and the log's consistency proofs.
  rpc GetEpoch(GetEpochRequest) returns (Epoch) {
    option (google.api.http) = { get: "/v1/domains/{domain_id}/epochs/{epoch}" };
  }

  // GetLatestEpoch returns the latest SignedMapRoot along with its inclusion
  // proof in the log and the log's consistency proofs.
  rpc GetLatestEpoch(GetLatestEpochRequest) returns (Epoch) {
    option (google.api.http) = { get: "/v1/domains/{domain_id}/epochs:latest" };
  }

  // GetEpochStream streams new epochs from a requested starting point
  // and continues as new epochs are created.
  rpc GetEpochStream(GetEpochRequest) returns (stream Epoch) {
    option (google.api.http) = { get: "/v1/domains/{domain_id}/epochs:stream" };
  }

  // ListMutations returns a list of mutations in a specific epoch.
  rpc ListMutations(ListMutationsRequest) returns (ListMutationsResponse) {
    option (google.api.http) = { get: "/v1/domains/{domain_id}/epochs/{epoch}/mutations" };
  }

  // ListMutationsStream is a streaming list of mutations in a specific epoch.
  rpc ListMutationsStream(ListMutationsRequest) returns (stream MutationProof) {
    option (google.api.http) = { get: "/v1/domains/{domain_id}/epochs/{epoch}/mutations:stream" };
  }

  // GetEntry returns a user's entry in the Merkle Tree.
  //
  // Entries contain signed commitments to a profile, which is also returned.
  // TODO(gbelvin): Replace with GetUser
  rpc GetEntry(GetEntryRequest) returns (GetEntryResponse) {
    option (google.api.http) = { get: "/v1/domains/{domain_id}/apps/{app_id}/users/{user_id}" };
  }

  // ListEntryHistory returns a list of historic GetEntry values.
  //
  // Clients verify their account history by observing correct values for their
  // account over time.
  rpc ListEntryHistory(ListEntryHistoryRequest) returns (ListEntryHistoryResponse) {
    option (google.api.http) = { get: "/v1/domains/{domain_id}/apps/{app_id}/users/{user_id}/history" };
  }

  // UpdateEntry updates a user's profile.
  //
  // Returns the current user profile.
  // Clients must retry until this function returns a proof containing the desired value.
  rpc UpdateEntry(UpdateEntryRequest) returns (UpdateEntryResponse) {
    option (google.api.http) = {
      put: "/v1/domains/{domain_id}/apps/{app_id}/users/{user_id}"
      body: "entry_update"
    };
  }
}

